--- a/app/src/main/res/layout/activity_searchable.xml
+++ b/app/src/main/res/layout/activity_searchable.xml
@@ -4,22 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:background="@color/black">
+    tools:context=".SearchableActivity"
+    android:orientation="vertical">
 
-    <androidx.appcompat.widget.SearchView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:searchIcon="@drawable/ic_baseline_play_arrow_24"
-        android:background="@color/white"
-        android:id="@+id/searchview"
-        android:layout_margin="20dp"
-
-        />
-
-
-
-
+        android:id="@+id/rvsongs"
+        android:layout_margin="5dp"
+        ></androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
